text-flow fix
modal content shall now not clip when a scrollbar is visible

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@
 
 .modal-body {
   padding: 10px;
-  width: 100%;
+  width: fit-content;
   overflow-y: auto;
 }
 
